Fix unwanted horizontal scrollbar

--- a/css/proactive.css
+++ b/css/proactive.css
@@ -487,7 +487,7 @@ end testing */
 
 .react_table_body
 {
-    overflow: scroll;
+    overflow-y: scroll;
     width: 100%;
     border-spacing: 0;
 }
